adds background mixin and applies to new classes: jumbotron and bride background

--- a/builds/sassEssentials/index.html
+++ b/builds/sassEssentials/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
+<!-- BODY -->
 <body>
+
+<!-- HEADER -->
 <header>
   <div class="container">
     <nav>
@@ -23,14 +27,16 @@
     </nav>
   </div>
 </header>
-
+<!-- JUMBOTRON -->
 <section class="jumbotron" id="jumbotron">
+<section class="background jumbotron" id="jumbotron">
   <div class="container">
     <h1>Jumbotron</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt cum doloribus asperiores rem beatae commodi excepturi incidunt dicta illum expedita, necessitatibus consequatur obcaecati nobis optio dolorum accusantium, ad dolor sed.</p>
   </div>
 </section>
-
+</section>
+<!-- TYPOGRPHY -->
 <section id="typography">
   <div class="container">
     <h1>Typography</h1>
@@ -58,6 +64,14 @@
     <button>Hot</button>
   </div><!-- container -->
 </section>
+<!-- BRIDGE BACKGROUND -->
+<section class="bridge background">
+ <div class="container">
+   <h1>Bridge Background</h1>
+ </div>
+</section>
+
+
 
 <section id="lists">
   <div class="container">
